-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.1
-
Microsoft Surface Book
-
-
020e7b4c198f5e74dd83da7fa8e64a02b14af2f9
When using an external webcam then the preview image may end up being delayed and not updated quickly. With an external Logitech HD webcam C615 the image takes 20 seconds before it initially displays and then about 5-10 seconds for the image to update afterwards.
This is reproducible with the declarative-camera example